# seledri

./: .gitignore  LICENSE  README.md  celery.conf  function_map.json  jobs.json  main.py  pyproject.toml  test.py
etc/: environment.sh
example/: sample.py
src/scheduler/: functionmap.py  timekeeper.py
src/seledri/: timekeeper.py  worker.py
src/seledri/tests/: test_function_map.py
src/tests/: test_celery.py  test_function_map.py  test_module.py
src/worker/: worker.py  worker_aps.py
